fix map overflow

--- a/source/css/modules/_variables.scss
+++ b/source/css/modules/_variables.scss
@@ -41,7 +41,7 @@ $blue: #1F505C;
 $text-c: $black;
 $bgc: $white;
 
-$link-c: $green;
+$link-c: $blue;
 $link-hover-c: $green;
 
 $header-bgc: $green;
